--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             
             <p>Suivez-moi sur les réseaux sociaux :</p>
             <div class="social-links">
-                <a href="https://github.com/tonpseudo" target="_blank">GitHub</a>
-                <a href="https://www.linkedin.com/in/tonpseudo" target="_blank">LinkedIn</a>
+                <a href="https://github.com/yoanvlt" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/yoan-viollet-8a636924b/" target="_blank">LinkedIn</a>
             </div>
         </div>
     </section>
