mise en plce du téléchargement cv

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#accueil"><span class="bubble"></span>Accueil</a></li>
             <li><a href="#competences"><span class="bubble"></span>Compétences</a></li>
-            <li><a href="#formations"><span class="bubble"></span>Formations</a></li>
+            <li><a href="#formations"><span class="bubble"></span>Formations & Expériences</a></li>
             <li><a href="#projets"><span class="bubble"></span>Projets</a></li>
             <li><a href="#contact"><span class="bubble"></span>Contact</a></li>
         </ul>
@@ -24,7 +24,10 @@
                 <p class="surname">VIOLLET</p>
                 <p class="name">Yoan</p>
                 <p class="description">Je suis un étudiant français de 20 ans, véhiculé, actuellement en BAC+3 à Ynov Aix-en-Provence. J'y suis la formation « Mastère Cybersécurité » en alternance.</p>
-                <button><span>Télécharger mon CV</span></button>
+                <button onclick="window.location.href='assets/cv/CV_Yoan.pdf';" download>
+                    <span>Télécharger mon CV</span>
+                </button>
+                
             </div>    
         </div>
         <div class="left">
